Updated necessary files

--- a/transaction/transaction.html
+++ b/transaction/transaction.html
@@ -58,7 +58,7 @@
                     <label for="seats">Seats</label>
                     <table id="seats-table" border="1">
                         <!-- Dynamically populated rows -->
-                        <button type="button" class="reserve-seats-btn" onclick="window.location.href='seats.html';">Reserve Seats</button>
+                        <button type="button" class="reserve-seats-btn" onclick="window.location.href='seats/seats.html';">Reserve Seats</button>
                     </table>
 
                     <label for="price">Total Price</label>
