--- a/transaction/transaction.html
+++ b/transaction/transaction.html
@@ -48,7 +48,7 @@
     
     <div class="transaction-box">
         <h1 class="title">TRANSACTIONS</h1>
-        <form action="transaction.php" method="post" class="trans-form">
+        <form action="../admin/transactions/trans_database.php" method="post" class="trans-form">
             <div class="container">
                 <div class="customer">
                     <label for="fname">Customer ID</label>
