--- a/transaction/seats/seats.html
+++ b/transaction/seats/seats.html
@@ -47,7 +47,7 @@
     <section class="seat-selection">
         <h2>Seat Selection</h2>
         <div class="screen">SCREEN</div>
-        <form class="seats-form" action="../transaction.html" method="post">
+        <form class="seats-form" action="../transaction.php" method="post">
             <div id="seats-container"></div>
             <button type="submit" id="reserve-button">Reserve</button>
         </form>
