--- a/transaction/tickets/tickets.html
+++ b/transaction/tickets/tickets.html
@@ -98,7 +98,7 @@
     <div class="total">
         <span>Total Due: $20.00</span>
     </div>
-<a href="../../main/main.html" class="back-btn">Back to Movies</a>
+<a href="index.html" class="back-btn">Back to Movies</a>
 </div>
 </div>
     
